simplify and get the simple figure based approach working

--- a/stylesheets/new_style.css
+++ b/stylesheets/new_style.css
@@ -1,13 +1,17 @@
+/*figure {*/
+    /*display: table;*/
+    /*width: 1px; !* This can be any width, so long as it's narrower than any image *!*/
+/*}*/
+/*img, figcaption {*/
+    /*display: table-row;*/
+/*}*/
+/*#gucc{*/
+
+
+/*}*/
+
 figure {
-    display: table;
-    width: 1px; /* This can be any width, so long as it's narrower than any image */
-}
-img, figcaption {
-    display: table-row;
-}
-#gucc{
-
-
+    max-width: 250px;
 }
 
 #img_cap{
